--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,10 @@
         "encore/laravel-admin": "1.6.*",
         "fideloper/proxy": "~3.3",
         "guzzlehttp/guzzle": "~6.0",
+        "jxlwqq/env-manager": "^0.1.0",
         "laravel-admin-ext/helpers": "^1.1",
         "laravel-admin-ext/media-manager": "^1.0",
+        "laravel-admin-ext/scheduling": "^1.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "manzhouya/auth-attempts": "^1.2"
